Fixed letter spacing of Mood Wish

--- a/sass/layouts/_head.scss
+++ b/sass/layouts/_head.scss
@@ -27,7 +27,7 @@
       font-family: "Heebo", sans-serif;
       font-size: 5rem;
       color: $color-primary;
-      letter-spacing: 0.1rem;
+      letter-spacing: 0.3rem;
       font-weight: bold;
     }
     .wish {
